# hades

./: .gitignore  AGENTS.md  PRD.md  README.md  pyproject.toml
.github/workflows/: pylint.yml  python-publish.yml
docs/agents/: domain.md  issue-tracker.md
src/hades/: __init__.py  classify.py  cli.py  console.py  db.py  hooks.py  indexer.py  models.py  process_checker.py  transcript.py  waiting.py
src/hades/commands/: archive.py  attention.py  export.py  list.py  purge.py  search.py  show.py  stats.py  watch.py
src/hades/sources/: __init__.py  base.py  claude.py  codex.py  common.py  cowork.py  gemini.py
tests/: conftest.py  test_classify.py  test_commands.py  test_db.py  test_hooks.py  test_indexer.py  test_process_checker.py  test_second_pass.py  test_transcript.py
