[project]
name = "hades-cli"
dynamic = ["version"]
description = "A local CLI for viewing, searching, and managing AI coding sessions across Claude Code, Codex, Gemini, and Cowork."
readme = "README.md"
authors = [{ name = "mnghn07", email = "ngh.nhatminh0712@gmail.com" }]
requires-python = ">=3.11"
dependencies = [
    "typer>=0.15",
    "rich>=13",
    "ijson>=3",
    "psutil>=6",
    "platformdirs>=4",
    "pendulum>=3",
    "sqlite-utils>=3",
]

[project.urls]
Homepage = "https://github.com/mnghn07/hades"
Repository = "https://github.com/mnghn07/hades"

[project.scripts]
hades = "hades.cli:app"

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "src/hades/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["src/hades"]

[dependency-groups]
dev = [
    "pylint>=4.0.6",
    "pytest>=8",
    "pytest-mock>=3",
    "typer>=0.15",
]

[tool.pylint.main]
disable = [
    "missing-module-docstring",
    "missing-function-docstring",
    "missing-class-docstring",
    "import-outside-toplevel",
    "duplicate-code",
    "broad-exception-caught",
    "too-many-locals",
    "too-many-instance-attributes",
    "too-many-arguments",
    "too-many-positional-arguments",
    "redefined-outer-name",
]

[tool.pylint.format]
max-line-length = 120
